Stop "add country" from making scrollbars in IE

--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -275,6 +275,7 @@ select.disabled {
     overflow: auto;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 #chart #data-chart-tab,
 #chart #sources-chart-tab {
